# DevEdge-IoTDevKit-ZephyrSDK

libs/: CMakeLists.txt  dfu_common.h
libs/dfu_murata_1sc/: CMakeLists.txt
libs/dfu_rs9116w/: CMakeLists.txt
samples/button_press_cb/src/: button.c  button.h  main.c
samples/tmo_shell/: CMakeLists.txt
samples/tmo_shell/src/: tmo_battery_ctrl.c  tmo_battery_ctrl.h  tmo_ble_demo.c  tmo_modem.c  tmo_shell.c  tmo_web_demo.c
